<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="stromkreis" translatable="false">Stromkreis</string>
    <string name="app_preferences_name">Einstellungen</string>
    <string name="empty_string" translatable="false" />
    <string name="save">Speichern</string>
    <string name="discard">Verwerfen</string>
    <string name="delete">Löschen</string>
    <string name="attribution_tag_discover_server">Suche Stromkreis-Gateway</string>
    <string name="attribution_tag_select_server_wifi">Server basierend auf WLAN auswählen</string>
    <string name="attribution_tag_suggest_turn_on_wifi">Empfehle WLAN zu aktivieren</string>
    <string name="onboarding_title">Willkommen bei Stromkreis</string>
    <string name="onboarding_subtitle">Scanne den einmaligen QR-Code von deiner Stromkreis-Seite, um die App mit dem Gateway deiner Energiegemeinschaft zu verbinden.</string>
    <string name="onboarding_scanner_hint">Richte die Kamera auf den QR-Code</string>
    <string name="onboarding_camera_denied">Kamerazugriff wurde verweigert. Erlaube ihn in den Einstellungen oder füge den Einrichtungslink unten ein.</string>
    <string name="onboarding_camera_unavailable">Auf diesem Gerät ist keine Kamera verfügbar. Füge stattdessen den Einrichtungslink unten ein.</string>
    <string name="onboarding_link_title">Einrichtungslink erhalten?</string>
    <string name="onboarding_link_description">Wenn du den Link auf diesem Telefon öffnest, richtet sich die App automatisch ein. Du kannst ihn auch hier einfügen.</string>
    <string name="onboarding_link_hint" translatable="false">https://stromkreis.net/app/setup/…</string>
    <string name="onboarding_connect">Verbinden</string>
    <string name="onboarding_close">Schließen</string>
    <string name="onboarding_working">Stromkreis-Verbindung wird eingerichtet…</string>
    <string name="onboarding_connected">Verbunden mit %s</string>
    <string name="onboarding_ready">Deine Stromkreis-App ist bereit.</string>
    <string name="onboarding_continue">Weiter</string>
    <string name="onboarding_error_not_setup_code">Das ist kein Stromkreis-Einrichtungscode. Scanne den QR-Code von deiner Stromkreis-Seite oder füge den Einrichtungslink ein.</string>
    <string name="onboarding_error_token_rejected">Dieser Einrichtungscode ist ungültig oder wurde bereits verwendet. Bitte deinen Stromkreis-Admin um einen neuen.</string>
    <string name="onboarding_error_server_rejected">Der Stromkreis-Server hat den Einrichtungscode abgelehnt (HTTP %d).</string>
    <string name="onboarding_error_invalid_response">Der Stromkreis-Server hat unerwartet geantwortet. Bitte versuche es später erneut.</string>
    <string name="onboarding_error_network">Der Stromkreis-Server ist nicht erreichbar. Prüfe deine Internetverbindung und versuche es erneut.</string>
    <string name="settings_stromkreis_setup">Stromkreis-Einrichtungscode scannen</string>
    <string name="settings_stromkreis_setup_summary">Scanne den einmaligen QR-Code von deiner Stromkreis-Seite, um die App (erneut) mit der Stromkreis-Cloud zu verbinden.</string>
    <string name="scan_setup_code_button">Einrichtungscode scannen</string>
    <string name="stromkreis_cloud">Stromkreis-Cloud</string>
    <string name="about_website">Website stromkreis.net</string>
    <string name="about_upstream">Basiert auf der openHAB-App</string>
    <string name="about_upstream_summary">Das Stromkreis-Gateway läuft auf openHAB; diese App ist ein Fork des openHAB-Android-Clients (EPL-2.0).</string>
    <string name="push_notification_status_impaired">Benachrichtigungen werden nur beim Öffnen der App und optional in regelmäßigen Abständen von der Stromkreis-Cloud abgerufen (kein Push). Für weitere Informationen hier berühren.</string>
    <string name="push_notification_status_disabled">Benachrichtigungen sind deaktiviert</string>
    <string name="notification_channel_crash_reports">Absturzberichte</string>
    <string name="notification_channel_crash_reports_description">Wird verwendet, um zu fragen, ob ein Absturzbericht gesendet werden soll</string>
    <string name="crash_report_notification_title">Stromkreis ist abgestürzt</string>
    <string name="crash_report_notification_text">Helfen Sie Stromkreis durch Senden des Absturzberichts zu verbessern</string>
    <string name="crash_report_notification_send_mail">E-Mail senden</string>
    <string name="open_in_maps">In OpenStreetMap öffnen</string>
    <string name="mainmenu_openhab_sitemaps">Sitemaps</string>
    <string name="mainmenu_openhab_preferences">Einstellungen</string>
    <string name="mainmenu_openhab_habpanel">HABPanel</string>
    <string name="mainmenu_openhab_main_ui">Main UI</string>
    <string name="mainmenu_openhab_frontail">Frontail</string>
    <string name="ui_on_server">%1$s (%2$s)</string>
    <string name="app_notifications">Benachrichtigungen</string>
    <string name="habpanel_error">Beim Laden von HABPanel ist ein Fehler aufgetreten</string>
    <string name="main_ui_error">Beim Laden der Main UI ist ein Fehler aufgetreten</string>
    <string name="frontail_error">Beim Laden von Frontail ist ein Fehler aufgetreten. Bitte beachten Sie, dass Frontail nicht über die Stromkreis-Cloud verfügbar ist.</string>
    <string name="mainmenu_openhab_selectsitemap">Standard-Sitemap auswählen</string>
    <string name="settings_clear_caches">Cache leeren</string>
    <string name="settings_connection_title">Verbindung</string>
    <string name="settings_display_title">Anzeige</string>
    <string name="settings_sitemap_title">Sitemap</string>
    <string name="settings_misc_title">Verschiedenes</string>
    <string name="settings_openhab_url">Lokale Server-URL</string>
    <string name="settings_openhab_url_summary">Die lokale Adresse des Stromkreis-Gateways in Ihrem Heimnetz (Rechnername oder IP). Setzen dieser Option deaktiviert die automatische Ermittlung. Aktueller Wert: %s</string>
    <string name="settings_openhab_alturl">Stromkreis-Cloud-URL</string>
    <string name="settings_openhab_alturl_summary">Die Adresse der Stromkreis-Cloud, über die das Gateway von unterwegs erreichbar ist. Aktueller Wert: %s</string>
    <string name="settings_openhab_username">Benutzername</string>
    <string name="settings_openhab_password">Passwort</string>
    <string name="settings_openhab_password_summary_weak">Schwaches Passwort gesetzt</string>
    <string name="settings_openhab_password_summary_strong">Starkes Passwort gesetzt</string>
    <string name="settings_openhab_api_token_hint">Wenn Sie ein API-Token verwenden, geben Sie dieses in das Benutzernamen-Feld ein und lassen Sie das Passwort-Feld leer</string>
    <string name="settings_openhab_sslclientcert">SSL-Client-Zertifikat</string>
    <string name="settings_openhab_sslclientcert_howto_summary">Für Hinweise und Erläuterungen zur SSL-Authentifizierung mittels Client-Zertifikat hier tippen</string>
    <string name="settings_openhab_sslclientcert_howto_url" translatable="false">https://community.openhab.org/t/using-nginx-reverse-proxy-for-client-certificate-authentication-start-discussion/43064</string>
    <string name="settings_openhab_sslclientcert_not_supported">SSL-Client-Zertifikate werden von Ihrem Gerät nicht unterstützt</string>
    <string name="frontail_url_title">Frontail URL</string>
    <string name="frontail_url_summary">Die URL von Frontail. Frontail ist in openHABian enthalten oder kann manuell installiert werden. Ohne Eintrag wird die Standardeinstellungen verwendet. Aktuelle Einstellungen: %s</string>
    <string name="settings_openhab_screentimeroff">Bildschirmabschaltung deaktivieren</string>
    <string name="settings_openhab_screentimeroff_summary">Der Bildschirm schaltet sich nicht aus, wenn Stromkreis läuft</string>
    <string name="start_page_title">Startseite</string>
    <string name="drawer_entries">Einträge im Seitenmenü</string>
    <string name="settings_openhab_theme">Design</string>
    <string name="settings_openhab_fullscreen">Vollbild</string>
    <string name="settings_set_as_launcher_title">Als Start-App registrieren</string>
    <string name="settings_set_as_launcher_summary">Verwendung der App als Start-App ermöglichen. Nach der Aktivierung muss die App noch als Standard-Start-App ausgewählt werden, um wirksam zu werden.</string>
    <string name="settings_sitemap_compact_mode_title">Kompaktmodus</string>
    <string name="settings_sitemap_compact_mode_off">Das zweizeilige Layout für Sitemap-Widgets vergrößert die Felder, wodurch die Bedienung einfacher wird. Bei längeren Listen muss allerdings mehr gescrollt werden.</string>
    <string name="settings_sitemap_compact_mode_on">Das einzeilige Layout für Sitemap-Widgets schafft Platz, um mehr Widgets gleichzeitig darzustellen. Allerdings verringert sich die Größe der einzelnen Felder.</string>
    <string name="settings_color_scheme_title">Farbschema</string>
    <string name="settings_show_icons">Icons anzeigen</string>
    <string name="settings_openhab_icon_format">Icon-Format</string>
    <string name="settings_openhab_icon_format_value_png" translatable="false">PNG</string>
    <string name="settings_openhab_icon_format_value_svg" translatable="false">SVG</string>
    <string name="settings_openhab_icon_format_png">Pixelgrafik</string>
    <string name="settings_openhab_icon_format_svg">Vektorgrafik</string>
    <string name="settings_image_widget_scaling">Bilder an Bildschirmbreite anpassen</string>
    <string name="settings_image_widget_scaling_summary_off">\'Image\'-Widgets, deren Inhalt kleiner als die Breite des Bildschirms sind, in ihrer ursprünglichen Größe anzeigen</string>
    <string name="settings_image_widget_scaling_summary_on">Die Größe von \'Image\'-Widgets so anpassen, dass deren Inhalt genau auf den Bildschirm passt</string>
    <string name="settings_chart_scaling">Diagrammskalierung</string>
    <string name="settings_chart_scaling_summary">Hinweis: Kleinere Skalierungen verkleinern die Schrift- und Liniengröße, sodass mehr Platz für den Graphen entsteht. Allerdings könnte die Schrift schlechter lesbar sein.</string>
    <string name="settings_chart_scaling_value_xs">Sehr klein</string>
    <string name="settings_chart_scaling_value_s">Klein</string>
    <string name="settings_chart_scaling_value_m">Standard</string>
    <string name="settings_chart_scaling_value_l">Groß</string>
    <string name="settings_openhab_chart_hq">Hochauflösende Diagramme</string>
    <string name="settings_openhab_chart_hq_summary">Diagramme zu erstellen kann aufwändig für den Server sein. Falls Sie merken, dass die Diagramme lange laden und Ihr Server nicht leistungsfähig ist, können Sie diese Option deaktivieren, um die Ladezeiten zu verkürzen.</string>
    <string name="settings_clear_default_sitemap">Standard-Sitemap zurücksetzen</string>
    <string name="settings_no_default_sitemap">Keine Standard-Sitemap festgelegt</string>
    <string name="settings_current_default_sitemap">Aktuelle Standard-Sitemap: %1$s</string>
    <string name="settings_main_ui_start_page">Startseite Main UI</string>
    <string name="settings_ui_command_item_howto_url" translatable="false">https://www.openhab.org/docs/apps/android.html#ui-command-item</string>
    <string name="settings_ui_command_item">Item für UI-Befehle</string>
    <string name="settings_ui_command_item_summary_on">Sitemap kann über Item \"%s\" gesteuert werden</string>
    <string name="settings_ui_command_item_summary_off">Sitemap kann nicht über ein Item gesteuert werden</string>
    <string name="theme_value_system" translatable="false">system</string>
    <string name="settings_debug_messages_title">Informationen zur Fehlerbehebung anzeigen</string>
    <string name="settings_troubleshooting_title">Fehlerbehebung</string>
    <string name="try_again_button">Erneut versuchen</string>
    <string name="view_log">Protokoll anzeigen</string>
</resources>