<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/settings_connection_title"
        android:key="connection">
        <Preference
            android:key="stromkreis_setup"
            android:title="@string/settings_stromkreis_setup"
            android:summary="@string/settings_stromkreis_setup_summary"
            android:icon="@drawable/ic_qr_code_scanner_grey_24dp"
            android:persistent="false"
            app:singleLineTitle="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_display_title">
        <ListPreference
            android:key="theme"
            android:title="@string/settings_openhab_theme"
            android:defaultValue="@string/theme_value_system"
            android:summary="%s"
            android:entries="@array/themeArray"
            android:entryValues="@array/themeValues"
            android:icon="@drawable/ic_palette_outline_grey_24dp"
            app:singleLineTitle="false" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="default_openhab_screentimeroff"
            android:summary="@string/settings_openhab_screentimeroff_summary"
            android:title="@string/settings_openhab_screentimeroff"
            app:singleLineTitle="false"
            android:widgetLayout="@layout/preference_material_switch" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="default_openhab_fullscreen"
            android:title="@string/settings_openhab_fullscreen"
            android:widgetLayout="@layout/preference_material_switch"
            app:singleLineTitle="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_troubleshooting_title">
        <Preference
            android:clickable="true"
            android:key="default_openhab_clear_cache"
            android:title="@string/settings_clear_caches"
            app:singleLineTitle="false" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="default_openhab_debug_messages"
            android:title="@string/settings_debug_messages_title"
            android:widgetLayout="@layout/preference_material_switch"
            app:singleLineTitle="false" />
        <Preference
            android:clickable="true"
            android:key="default_openhab_log"
            android:title="@string/view_log"
            app:singleLineTitle="false" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
